<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">App Disabler</string>
    <string name="search_packages">Search packages...</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="enable_selected">Enable Selected</string>
    <string name="disable_selected">Disable Selected</string>
    <string name="filter_all">All apps</string>
    <string name="filter_third_party">Third-party apps</string>
    <string name="filter_system">System apps</string>
</resources>
